--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
       
     -->
-    <!-- tailwindcss -->
+  <!-- tailwindcss -->
   <script src="https://cdn.tailwindcss.com"></script>
-  
 
-  <title>React App</title>
+
+  <title>Programmer's Book</title>
 </head>
 
 <body>
