--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       
     -->
   <!-- tailwindcss -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@2.25.0/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
 
 
